--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -25,6 +25,10 @@ jobs:
         working-directory: ./terraform
         run: terraform init
 
+      - name: Terraform Apply
+        working-directory: ./terraform
+        run: terraform apply -auto-approve
+
       - name: Terraform Destroy
         working-directory: ./terraform
         run: terraform destroy -auto-approve
